--- a/package.json
+++ b/package.json
@@ -12,8 +12,15 @@
   "dependencies": {
     "@astrojs/check": "^0.9.3",
     "@astrojs/cloudflare": "^11.0.4",
+    "@astrojs/react": "^3.6.2",
+    "@fontsource/inter": "^5.1.0",
     "@google/generative-ai": "^0.19.0",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
     "astro": "^4.15.5",
+    "marked": "^14.1.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "typescript": "^5.6.2"
   }
 }
