--- a/package.json
+++ b/package.json
@@ -6,21 +6,30 @@
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro check && astro build",
-    "preview": "astro preview",
+    "preview": "wrangler dev --remote",
     "astro": "astro"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.3",
     "@astrojs/cloudflare": "^11.0.4",
     "@astrojs/react": "^3.6.2",
+    "@astrojs/tailwind": "^5.1.0",
+    "@cloudflare/ai-utils": "^1.0.1",
+    "@fontsource-variable/inter-tight": "^5.1.0",
     "@fontsource/inter": "^5.1.0",
     "@google/generative-ai": "^0.19.0",
+    "@radix-ui/react-radio-group": "^1.2.0",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "astro": "^4.15.5",
     "marked": "^14.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "typescript": "^5.6.2"
+    "tailwindcss": "^3.4.11",
+    "typescript": "^5.6.2",
+    "uuid": "^10.0.0"
+  },
+  "devDependencies": {
+    "@types/uuid": "^10.0.0"
   }
 }
