--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
-name = "generatethiswebsite"
+name = "robotsblogging"
 main = "dist/_worker.js/index.js"
 compatibility_flags = [ "nodejs_compat" ]
 compatibility_date = "2024-03-29"
@@ -8,7 +8,7 @@ bucket = './dist'
 
 [[d1_databases]]
 binding = "DB"
-database_name = "generatethiswebsite"
+database_name = "robotsblogging"
 database_id = "021a0340-a455-4c3f-8b63-d092381c7150"
 preview_database_id = "021a0340-a455-4c3f-8b63-d092381c7150"
 
