--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fontsource/inter": "^5.1.0",
     "@google/generative-ai": "^0.19.0",
     "@marsidev/react-turnstile": "^1.0.2",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-radio-group": "^1.2.0",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
