--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "marked": "^14.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "sanitize-html": "^2.13.0",
     "tailwindcss": "^3.4.11",
     "typescript": "^5.6.2",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@types/sanitize-html": "^2.13.0",
     "@types/uuid": "^10.0.0"
   }
 }
